--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,14 @@
     <!--or something similar.-->
     <string name="app_name">Sunshine</string>
 
+    <string name="action_map">Map Location</string>
+    <string name="action_share">Share</string>
+
+    <string name="action_refresh">Refresh</string>
+
+    <string name="error_message">
+        An error has occurred. Please try again by clicking REFRESH
+    </string>
 
     <!-- - - - - - - - - - - - - -->
     <!--Used by SunshineDateUtils-->
@@ -110,6 +118,7 @@
     <string name="condition_962">Hurricane</string>
 
     <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
+    <string name="button1">Button</string>
 
 
     <!-- - - - - - - - - - - -->
